--- a/style.css
+++ b/style.css
@@ -329,7 +329,7 @@ button {
     float: left;
     font-size: 18px;
     text-align: center;
-    color: #ffffff;
+    color: #0707e3;
     background-color: #363636;
     padding: 10px 0px;
 }
