--- a/style.css
+++ b/style.css
@@ -311,7 +311,7 @@ button {
     width: 80%;
     float: left;
     font-size: 50px;
-    color: #fdfdfe;
+    color: #0909c3;
     font-weight: bold;
     text-transform: uppercase;
     padding-top: 150px;
